# csvpath

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  README.md  aliases.bat  aliases.sh  gen_docs.py  main.py  pyproject.toml  pytest.ini  repl.py  run.py  svk.bat
assets/assets/: first.csvpaths
assets/config/: config.ini  extra-functions.imports  jenkins-local-azure.ini  jenkins-local-filesystem-mysql.ini  jenkins-local-gcs.ini  jenkins-local-s3.ini  jenkins-local-sftp.ini  jenkins-local-windows.ini  jenkins-s3.ini  jenkins-windows-azure.ini  jenkins-windows-gcs.ini  jenkins-windows-local.ini  jenkins-windows-s3.ini  jenkins-windows-sftp.ini  local-localhost-sftp.ini  s3-local-sftp.ini
assets/gocd/: Mac.goenvironment.json  Windows.goenvironment.json  azure-pipeline.gopipeline.json  env-gocd.json  gcs-pipeline.gopipeline.json  mac-builds.goenvironment.json  mac-env-gocd.json  mac-env.goenvironment.json  s3-pipeline.gopipeline.json  s3.sh  sftp-pipeline.gopipeline.json
assets/libs/: release_candidate_maker-0.0.25-py3-none-any.whl  release_candidate_maker-0.0.27-py3-none-any.whl  release_candidate_maker-0.0.28-py3-none-any.whl  release_candidate_maker-0.0.29-py3-none-any.whl
assets/mac/: azure-pipeline.gopipeline.json
config/: config.ini
csvpath/: __init__.py  csvpath.py  csvpaths.py  csvpaths_manager.py  exceptions.py  files_manager.py  parser_utility.py  results_manager.py
csvpath/cli/: asker.py  cli.py  drill_down.py  function_describer.py  functions_lister.py  selecter.py
csvpath/managers/: csvpath_result.py  csvpaths_manager.py  file_manager.py  files_manager.py  listener.py  metadata.py  registrar.py  result.py  result_serializer.py  results_manager.py  (+3 more)
docs/: README.md  asbool.md  assignment.md  comments.md  config.md  csvpath.html  examples.md  files.md  functions.md  grammar.md  headers.md  matching.md  paths.md  printing.md  qualifiers.md  references.md  scanning.md  search.js  terms.md  variables.md
pdocs/: csvpath.html  search.js
tests/: conftest.py  save.py  test_assignment.py  test_box.py  test_cache.py  test_call_single_in_group.py  test_code.py  test_comments.py  test_config.py  test_csvpath.py  test_csvpaths.py  test_csvpaths_coordinator_functions.py  test_expression_util.py  test_files_reference_finder.py  test_functions.py  test_jinja.p  test_jinja.py  test_lark_parser.py  test_lines.py  test_logger.py  test_matcher.py  test_metadata_parser.py  test_modes.py  test_or.py  test_pandas.py  test_path_util.py  test_print.py  test_qualifiers.py  test_ref_grammar.py  test_reference_finder.py  test_reference_parser.py  test_results_reference_finder.py  test_run_home_maker.py  test_s3.py  test_scanner.py  test_segments.py  test_single_from_group.py  test_sqlite_bootstrap.py  test_template_util.py  test_var_util.py  (+1 more)
(+1926 files in other folders)
