[tool.poetry]
name = "csvpath"
version = "0.1.0"
description = ""
authors = ["David Kershaw <dk107dk@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
ply = "^3.11"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
