[tool.poetry]
name = "csvpath"
version = "0.0.602"
description = "CsvPath Framework is a data preboarding automation library for receiving, validating, and tracking CSV, Excel, JSONL and other tabular data files before they can corrupt downstream data consumers."
authors = ["David Kershaw <info@csvpath.org>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: File Formats",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]
include = ["config","assets"]

[tool.pytest.ini_options]
#testpaths = ["tests"]

[tool.poetry.urls]
"Github" = "https://github.com/csvpath/csvpath.git"
"Csvpath.org" = "https://www.csvpath.org"

[tool.poetry.scripts]
cli = "csvpath.cli.cli:run"
release = "run:run"

[tool.poetry.dependencies]
python = ">3.10,<4.0"
pytest = "8.4.2"
marquez-python = "0.50.0"
requests = "2.32.5"
python-dateutil = "2.9.0.post0"
jinja2 = "3.1.6"
inflect = "7.5.0"
lark = "1.3.1"
tabulate = "0.9.0"
metaphone = "0.6"
pylightxl = "1.61"
pytz = "2024.2"
openlineage-python = "1.45.0"
ckanapi = "4.9"
smart-open = {extras = ["all"], version = "7.5.1"}
#smart-open = "^7.1.0"
paramiko = "3.5.1"
boto3 = "1.42.65"
opentelemetry-distro = {extras = ["otlp"], version = "0.50b0"}
email-validator = "2.3.0"
validators = "0.34.0"
prompt-toolkit = "3.0.52"
pdoc = "15.0.4"
azure-storage-blob = "12.28.0"
google-cloud-storage = "3.9.0"
sqlalchemy = "2.0.48"
mysqlclient = "2.2.8"
psycopg2-binary = "2.9.11"
pandas = "2.3.3"
lxml = "6.0.2"
jsonlines = "4.0.0"
jsonpath-ng = "1.8.0"
pyjson5 = "2.0.0"
pydantic = "2.12.5"
pyarrow = "23.0.1"
jsonpickle = "4.1.1"
psutil = "^7.2.2"
ruff = "^0.15.8"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"
pydeps = "1.12.20"
pylint = "3.3.9"
coverage = "7.13.4"
pytest = "8.4.2"
pytest-profiling = "1.8.1"
release_candidate_maker = { path = "assets/libs/release_candidate_maker-0.0.35.tar.gz" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
